// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo renders always demo correctly 1`] = `
<div class="vs-tooltip">
  <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">always<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
</div>
`;

exports[`Tooltip demo renders basic demo correctly 1`] = `
<div class="vs-tooltip">
  <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">Click Me<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
</div>
`;

exports[`Tooltip demo renders container demo correctly 1`] = `
<div style="position: relative; height: 200px; overflow: scroll; background-color: rgb(241, 241, 241); box-shadow: #999 1px 1px 5px inset; padding: 50px;">
  <div style="height: 500px;">
    <div class="vs-tooltip">
      <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">Click Me<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
      <div data-transfer="false" class="vs-tooltip-popper vs-tooltip-popper-white v-transfer-dom" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
        <div class="vs-tooltip-arrow"></div>
        <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo renders delay demo correctly 1`] = `
<div class="vs-tooltip">
  <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">hover delay 1s<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
</div>
`;

exports[`Tooltip demo renders inline demo correctly 1`] = `
<div>
  <div x-placement="auto-start" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="auto" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="auto-end" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top-start" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top-end" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right-start" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right-end" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom-end" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom-start" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left-end" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left-start" class="vs-tooltip-popper vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
</div>
`;

exports[`Tooltip demo renders placement demo correctly 1`] = `
<div>
  <table cellspacing="{5}" class="placement-table">
    <tbody>
      <tr>
        <td></td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">bottom-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">bottom<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">bottom-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td></td>
      </tr>
      <tr>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">right-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">left-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">right<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">left<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">right-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td></td>
        <td></td>
        <td></td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">left-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td></td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">top-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">top<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td>
          <div class="vs-tooltip">
            <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">top-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
            <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
              <div class="vs-tooltip-arrow"></div>
              <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
            </div>
          </div>
        </td>
        <td></td>
      </tr>
    </tbody>
  </table>
  <hr>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">auto<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div> <br>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">auto-start<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div> <br>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">auto-end<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo renders theme demo correctly 1`] = `
<div>
  <div x-placement="auto-start" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="auto" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="auto-end" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top-start" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="top-end" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right-start" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="right-end" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom-end" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="bottom-start" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left-end" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
  <div x-placement="left-start" class="vs-tooltip-popper vs-tooltip-popper-white vs-tooltip-popper-inline">
    <div class="vs-tooltip-arrow"></div>
    <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
  </div>
</div>
`;

exports[`Tooltip demo renders trigger demo correctly 1`] = `
<div role="toolbar" class="vs-btn-toolbar">
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">right-click<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">hover<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">focus<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
  <div class="vs-tooltip">
    <div class="vs-tooltip-rel"><button type="button" class="vs-btn vs-btn-default">active<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
    <div data-transfer="false" class="vs-tooltip-popper v-transfer-dom" style="display: none;" appear="true" enteractiveclass="animated in" leaveactiveclass="animated fade">
      <div class="vs-tooltip-arrow"></div>
      <div class="vs-tooltip-inner" style="max-width: 250px;">This is a ToolTip for simple text hints. It can replace the title property</div>
    </div>
  </div>
</div>
`;
